--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -29,6 +29,7 @@ filterwarnings =
     error::pennylane.exceptions.PennyLaneDeprecationWarning
     # Suppress expected AutoGraphWarnings that arise from the tests
     error:AutoGraph will not transform the function:pennylane.capture.autograph.AutoGraphWarning
+    error::pennylane.exceptions.PennyLaneUserWarning
 #addopts = --benchmark-disable
 xfail_strict=true
 rng_salt = v0.40.0
