--- a/tach.toml
+++ b/tach.toml
@@ -14,8 +14,9 @@ source_roots = [
 
 forbid_circular_dependencies = true
 
-## TOP LEVEL MODULE
-# Users should only be importing from this module. Nothing in the source code should!
+## UI module(s)
+# Nothing in the source code should be able to import anything from top-level.
+# This access point is restricted as it is here primarily for user convenience.
 
 [[modules]]
 path = "pennylane"
@@ -45,8 +46,9 @@ utility = true
 depends_on = []
 cannot_depend_on = ["pennylane.ftqc", "pennylane.labs", "pennylane.compiler.python_compiler"]
 
-## CORE modules
-# These modules are fundamental, and should not have any dependent modulesin lower levels.
+## CORE module(s)
+# These modules are fundamental to the PennyLane ecosystem and
+# they cannot depend on any module "lower" than them.
 
 [[modules]]
 path = "pennylane.control_flow"
@@ -146,8 +148,8 @@ path = "pennylane.circuit_graph"
 layer = "core"
 cannot_depend_on = ["pennylane.ftqc", "pennylane.labs", "pennylane.compiler.python_compiler"]
 
-## AUXILIARY modules
-# These modules can only import from CORE modules.
+## AUXILIARY module(s)
+# These modules can only import from CORE modules and within their layer.
 
 [[modules]]
 path = "pennylane.shadows"
@@ -163,7 +165,6 @@ cannot_depend_on = ["pennylane.ftqc", "pennylane.labs", "pennylane.compiler.pyth
 path = "pennylane.optimize"
 layer = "auxiliary"
 cannot_depend_on = ["pennylane.ftqc", "pennylane.labs", "pennylane.compiler.python_compiler"]
-
 
 # TEMPLATES MODULE 
 
@@ -210,8 +211,8 @@ cannot_depend_on = ["pennylane.ftqc", "pennylane.labs", "pennylane.compiler.pyth
 # layer = "auxiliary"
 # cannot_depend_on = ["pennylane.ftqc", "pennylane.labs", "pennylane.compiler.python_compiler"]
 
-## TERTIARY modules
-# These modules can only import from CORE or AUXILIARY modules.
+## TERTIARY module(s)
+# These modules can only import from CORE, AUXILIARY and modules within their layer.
 
 [[modules]]
 path = "pennylane.qaoa"
@@ -268,11 +269,11 @@ path = "pennylane.debugging"
 layer = "tertiary"
 cannot_depend_on = ["pennylane.ftqc", "pennylane.labs", "pennylane.compiler.python_compiler"]
 
-## UNSORTED
+## UNSORTED module(s)
 # Due to circular import problems, these modules below have incorrect dependencies 
 # and need to be parsed and fixed accordingly.
 
-# These are left temporarily to depend on ANYTHING but pennylane.ftqc and pennylane.labs
+# These are left temporarily to depend on ANYTHING but the closed modules at the top of this file.
 
 [[modules]]
 path = "pennylane.transforms.core"
