--- a/tach.toml
+++ b/tach.toml
@@ -12,7 +12,7 @@ source_roots = [
     ".",
 ]
 
-# Forbids circular dependencies to be defined WITHIN this tach.toml.
+# Forbids circular dependencies to be defined WITHIN this tach.toml file.
 # NOTE: This does not check anything inside the source code for problems.
 forbid_circular_dependencies = true
 
