add more info to tach

--- a/tach.toml
+++ b/tach.toml
@@ -29,6 +29,9 @@ cannot_depend_on = ["pennylane.ftqc", "pennylane.labs", "pennylane.compiler.pyth
 ## CLOSED modules
 # No module can define dependencies to the following set of modules in this tach.toml file.
 
+# NOTE: visibility = [] just means no module in this file can declare 
+# `depends_on = [<insert-closed-module>]` within this file.
+
 [[modules]]
 path = "pennylane.ftqc"
 visibility = []
