--- a/.github/workflows/tests-labs.yml
+++ b/.github/workflows/tests-labs.yml
@@ -63,7 +63,7 @@ jobs:
       branch: ${{ github.ref }}
       coverage_artifact_name: labs-coverage
       additional_os_packages: openmpi-bin openmpi-doc libopenmpi-dev      
-      pytest_additional_args: --import-mode=importlib
+      pytest_additional_args: --import-mode=importlib --verbose
       pytest_coverage_flags:  --cov-config=pennylane/labs/.coveragerc --cov=pennylane/labs --cov-append --cov-report=term-missing --cov-report=xml --no-flaky-report --tb=native
       python_version: '3.10'
       pytest_test_directory: pennylane/labs/tests
