Raise `UserWarning` for `set_shots` confusing usage (#7500)
**Context:**
This PR implements the first `PennyLaneUserWarning` as to indicate the
specific setting order when two sources of `shots` setup come up
together after `set_shots` is alive:
```python
@qml.qnode(qml.device('default.qubit'))
def c():
    return qml.sample(wires=0)

qml.set_shots(c, 10)(shots=20)  # A PLUW to come up
```

**Description of the Change:**
Make sure there's a `PLUW` raised when then mentioned usage was executed
at system level.

**Benefits:**

**Possible Drawbacks:**

**Related GitHub Issues:**
[sc-92096]

---------

Co-authored-by: Andrija Paurevic <46359773+andrijapau@users.noreply.github.com>
Co-authored-by: Christina Lee <christina@xanadu.ai>

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -29,6 +29,7 @@ filterwarnings =
     error::pennylane.exceptions.PennyLaneDeprecationWarning
     # Suppress expected AutoGraphWarnings that arise from the tests
     error:AutoGraph will not transform the function:pennylane.capture.autograph.AutoGraphWarning
+    error:Both 'shots=' parameter and 'set_shots' transform are specified. :UserWarning
 #addopts = --benchmark-disable
 xfail_strict=true
 rng_salt = v0.41.0
