--- a/.github/workflows/tests-labs.yml
+++ b/.github/workflows/tests-labs.yml
@@ -68,6 +68,6 @@ jobs:
       python_version: '3.10'
       pytest_test_directory: pennylane/labs/tests
       additional_pip_packages: |
-        geometric h5py basis_set_exchange pyscf
-        geometric h5py basis-set-exchange pyscf optax
+        geometric mpi4py h5py basis_set_exchange pyscf
+        geometric mpi4py h5py basis-set-exchange pyscf optax
         ${{ needs.default-dependency-versions.outputs.jax-version }}
