[Labs] zxopt module containing `full_reduce`, `full_optimize`, `basic_optimization`, `todd` (#7471)
Create zxopt module with basic optimization [sc-91788]

Currently not on the technical roadmap, but a very useful research tool
and related to https://github.com/PennyLaneAI/pennylane/issues/7002 and
https://github.com/PennyLaneAI/pennylane/issues/7003

---------

Co-authored-by: David Wierichs <david.wierichs@xanadu.ai>
Co-authored-by: Guillermo Alonso-Linaje <65235481+KetpuntoG@users.noreply.github.com>

--- a/.github/workflows/tests-labs.yml
+++ b/.github/workflows/tests-labs.yml
@@ -69,5 +69,5 @@ jobs:
       pytest_test_directory: pennylane/labs/tests
       additional_pip_packages: |
         geometric h5py basis_set_exchange pyscf galois
-        geometric h5py basis-set-exchange pyscf galois optax
+        geometric h5py basis-set-exchange pyscf galois optax pyzx
         ${{ needs.default-dependency-versions.outputs.jax-version }}
