add allocate, deallocate, and allocate_ctx

--- a/tach.toml
+++ b/tach.toml
@@ -154,6 +154,11 @@ path = "pennylane.circuit_graph"
 layer = "core"
 cannot_depend_on = ["pennylane.ftqc", "pennylane.labs", "pennylane.compiler.python_compiler"]
 
+[[modules]]
+path = "pennylane.allocation"
+layer = "core"
+cannot_depend_on = ["pennylane.ftqc", "pennylane.labs", "pennylane.compiler.python_compiler"]
+
 ## AUXILIARY module(s)
 # These modules can only import from CORE modules and within their layer.
 
