--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -108,7 +108,7 @@ jobs:
         with:
           ref: ${{ inputs.branch }}
           fetch-depth: ${{ inputs.checkout_fetch_depth }}
-          repository: PennyLaneAI/pennylane
+          repository: QSAR-UBC/pennylane_qutrit_mixed
       
       - name: Install uv
         uses: astral-sh/setup-uv@v5
