--- a/tach.toml
+++ b/tach.toml
@@ -52,6 +52,12 @@ utility = true
 depends_on = []
 cannot_depend_on = ["pennylane.ftqc", "pennylane.labs", "pennylane.compiler.python_compiler"]
 
+[[modules]]
+path = "pennylane.concurrency"
+utility = true
+depends_on = []
+cannot_depend_on = ["pennylane.ftqc", "pennylane.labs", "pennylane.compiler.python_compiler"]
+
 ## CORE module(s)
 # These modules are fundamental to the PennyLane ecosystem and
 # they cannot depend on any module "lower" than them.
