--- a/.github/workflows/tests-labs.yml
+++ b/.github/workflows/tests-labs.yml
@@ -1,6 +1,8 @@
 name: PennyLane Labs Unit-Tests
 on:
   pull_request:
+    branches:
+      - master
 
 concurrency:
   group: qml-labs-${{ github.workflow }}-${{ github.ref }}
