--- a/.github/workflows/tests-labs.yml
+++ b/.github/workflows/tests-labs.yml
@@ -1,10 +1,13 @@
 name: PennyLane Labs Unit-Tests
 on:
   pull_request:
+    branches:
+      - master
 
 concurrency:
   group: qml-labs-${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
+  
 
 jobs:
   # This workflow is `required` if the PR has updated any files within `pennylane/labs/*`
