add capture fixture

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -8,6 +8,7 @@ markers =
     torch: marks tests for torch testing (select with '-m "core"')
     tf: marks tests for tf testing (select with '-m "tf"')
     jax: marks tests for jax testing (select with '-m "jax"')
+    capture: marks tests for plxpr capture
     all_interfaces: marks tests for mixed interfaces testing (select with '-m "all_interfaces"')
     slow: marks tests as slow (deselect with '-m "not slow"')
     gpu: marks tests run on a GPU (deselect with '-m "not gpu"')
