--- a/.github/workflows/interface-dependency-versions.yml
+++ b/.github/workflows/interface-dependency-versions.yml
@@ -62,7 +62,7 @@ jobs:
         run: echo "version=${{ inputs.jax_version }}" >> $GITHUB_OUTPUT
 
       - name: Default Catalyst JAX Version
-        id: jax
+        id: catalyst-jax
         run: echo "version=${{ inputs.catalyst_jax_version }}" >> $GITHUB_OUTPUT
       
       - name: Default Tensorflow Version
