--- a/.github/workflows/interface-unit-tests.yml
+++ b/.github/workflows/interface-unit-tests.yml
@@ -402,13 +402,13 @@ jobs:
             fromJSON(needs.setup-ci-load.outputs.python-version).jax-tests
             || fromJSON(needs.setup-ci-load.outputs.python-version).default
            }}
-    if: ${{ !contains(fromJSON(needs.setup-ci-load.outputs.jobs-to-skip), 'jax-tests') }}
+    if: ${{ !contains(fromJSON(needs.setup-ci-load.outputs.jobs-to-skip), 'capture-jax-tests') }}
     uses: ./.github/workflows/unit-test.yml
     with:
       job_runner_name: ${{ needs.determine_runner.outputs.runner_group }}
-      job_name: ${{ inputs.job_name_prefix }}jax-tests (${{ matrix.group }}, ${{ matrix.python-version }})${{ inputs.job_name_suffix }}
+      job_name: ${{ inputs.job_name_prefix }}capture-jax-tests (${{ matrix.group }}, ${{ matrix.python-version }})${{ inputs.job_name_suffix }}
       branch: ${{ inputs.branch }}
-      coverage_artifact_name: core-interfaces-coverage-jax-${{ matrix.python-version }}-${{ matrix.group }}
+      coverage_artifact_name: core-interfaces-coverage-capture-jax-${{ matrix.python-version }}-${{ matrix.group }}
       python_version: ${{ matrix.python-version }}
       additional_pip_packages: |
         ${{ needs.default-dependency-versions.outputs.catalyst-jax-version }}
@@ -418,7 +418,7 @@ jobs:
       pytest_markers: capture and not qcut and not finite-diff and not param-shift
       pytest_additional_args: --dist=loadscope --splits 1 --group ${{ matrix.group }} ${{ needs.warnings-as-errors-setup.outputs.pytest_warning_args }}
       pytest_durations_file_path: '.github/durations/capture_jax_tests_durations.json'
-      pytest_xml_file_path: '${{ inputs.job_name_prefix }}jax-tests (${{ matrix.group }}, ${{ matrix.python-version }})${{ inputs.job_name_suffix }}.xml'
+      pytest_xml_file_path: '${{ inputs.job_name_prefix }}capture-jax-tests (${{ matrix.group }}, ${{ matrix.python-version }})${{ inputs.job_name_suffix }}.xml'
       requirements_file: ${{ github.event_name == 'schedule' && strategy.job-index == 0 && 'capture_jax.txt' || '' }}
 
 
