Fix pyproject.toml license format for PEP 621 compliance
- Change license from string to {text = "Apache-2.0"} format
- Fixes 'python setup.py --version' command that was failing due to
  invalid license configuration
- Ensures compliance with PEP 621 project metadata standards

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "pennylane"
 description = "PennyLane is a cross-platform Python library for quantum computing, quantum machine learning, and quantum chemistry. Train a quantum computer the same way as a neural network."
 readme = "README.md"
-license =  "Apache-2.0"
+license = {text = "Apache-2.0"}
 requires-python = ">=3.10"
 dynamic = ["version"]
 dependencies = [
