add python env with setuptools

--- a/.github/workflows/rc_sync.yml
+++ b/.github/workflows/rc_sync.yml
@@ -24,10 +24,23 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+
       # Checks-out the PennyLane repository
       - uses: actions/checkout@v3
         with:
           ref: master
+
+      # Sets up Python environment
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      # Ensure setuptools is up-to-date for pyproject.toml processing
+      - name: Install latest setuptools 
+        run: |
+          python -m pip install --upgrade pip
+          pip install setuptools
 
       # Check for the existence of an rc branch for the current PennyLane version
       - name: Check for rc branch
