--- a/.github/workflows/rc_sync.yml
+++ b/.github/workflows/rc_sync.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Install latest setuptools 
         run: |
           python -m pip install --upgrade pip
-          pip install "setuptools>=75.8.1"
+          pip install --upgrade setuptools
 
       # Check for the existence of an rc branch for the current PennyLane version
       - name: Check for rc branch
