add python configuration step to `rc_sync.yml`  (#7818)
**Context:**

RC sync action was failing due to an older `setuptools` version.

**Benefits:** Ran the rc sync action in PL against this branch and it
worked: https://github.com/PennyLaneAI/pennylane/pull/7819

[sc-94862]

--- a/.github/workflows/rc_sync.yml
+++ b/.github/workflows/rc_sync.yml
@@ -29,6 +29,18 @@ jobs:
         with:
           ref: master
 
+      # Sets up Python environment
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      # Ensure setuptools is up-to-date for pyproject.toml processing
+      - name: Install latest setuptools 
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade setuptools
+
       # Check for the existence of an rc branch for the current PennyLane version
       - name: Check for rc branch
         run: |
