--- a/.github/workflows/interface-dependency-versions.yml
+++ b/.github/workflows/interface-dependency-versions.yml
@@ -16,6 +16,11 @@ on:
         description: The version of JAX to use for testing
         required: false
         type: string
+        default: '0.6.2'
+      catalyst_jax_version:
+        description: The version of JAX to use for testing along with Catalyst
+        required: false
+        type: string
         default: '0.6.0'
       tensorflow_version:
         description: The version of TensorFlow to use for testing
@@ -31,6 +36,9 @@ on:
       jax-version:
         description: The version of JAX to use
         value: ${{ jobs.default-dependency-versions.outputs.jax-version }}
+      catalyst-jax-version:
+        description: The version of JAX to use along with Catalyst
+        value: ${{ jobs.default-dependency-versions.outputs.catalyst-jax-version }}
       tensorflow-version:
         description: The version of TensorFlow to use
         value: ${{ jobs.default-dependency-versions.outputs.tensorflow-version }}
@@ -52,6 +60,10 @@ jobs:
       - name: Default JAX Version
         id: jax
         run: echo "version=${{ inputs.jax_version }}" >> $GITHUB_OUTPUT
+
+      - name: Default Catalyst JAX Version
+        id: catalyst-jax
+        run: echo "version=${{ inputs.catalyst_jax_version }}" >> $GITHUB_OUTPUT
       
       - name: Default Tensorflow Version
         id: tensorflow
@@ -70,6 +82,7 @@ jobs:
         run: echo "latest=--index https://test.pypi.org/simple/ --prerelease=allow --upgrade-package PennyLane-Lightning PennyLane-Lightning" >> $GITHUB_OUTPUT
     
     outputs:
+      catalyst-jax-version: jax==${{ steps.catalyst-jax.outputs.version }} jaxlib==${{ steps.catalyst-jax.outputs.version }}
       jax-version: jax==${{ steps.jax.outputs.version }} jaxlib==${{ steps.jax.outputs.version }}
       tensorflow-version: tensorflow~=${{ steps.tensorflow.outputs.version }} tf-keras~=${{ steps.tensorflow.outputs.version }}
       pytorch-version: torch~=${{ steps.pytorch.outputs.version }}
