--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -32,8 +32,8 @@ networkx==3.1
 requests==2.32.3
 # we do not pin the sphinx theme, to allow the
 # navbar and header data to be updated at the source
-# pennylane-sphinx-theme
-git+https://github.com/PennyLaneAI/pennylane-sphinx-theme.git@fx-right-nav
+pennylane-sphinx-theme
+# git+https://github.com/PennyLaneAI/pennylane-sphinx-theme.git@fx-right-nav
 tomli~=2.0.0 # Drop once minimum Python version is 3.11
 sphinxext-opengraph==0.9.0
 matplotlib==3.8.0
